Scrollbar issues left in CSS

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,7 +5,6 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 /* General styles */
@@ -21,10 +20,9 @@ body {
 #hero {
     height: 500px;
     background: url("../assets/images/pexels-marta-wave-6437840.jpg") no-repeat center center/cover;
-    width: 60%;
+    width: 50%;
     /* Make the image take up half of the span */
     opacity: 70%;
-    margin-left: 10px;
 }
 
 #hero>h2 {
@@ -32,7 +30,6 @@ body {
     font-size: 40px;
     text-align: left;
     color: green;
-    margin: 20% 0 2% 120%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -46,6 +43,7 @@ body {
     margin: 0;
 }
 
+
 #menu li {
     margin: 0 15px;
 }
@@ -53,7 +51,6 @@ body {
 #menu li a {
     text-decoration: none;
     color: #333;
-    font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
     padding: 5px 10px;
 }
